vendor/bifrost/tls/bindings/x509.odin


	// d2i_X509_REQ parses up to |len| bytes from |*inp| as a DER-encoded
	// CertificateRequest (RFC 2986), as described in |d2i_SAMPLE|.
	d2i_X509_REQ :: proc(out: ^^X509_REQ, inp: ^^u8, len: c.long) -> ^X509_REQ ---

	// i2d_X509_REQ marshals |req| as a CertificateRequest (RFC 2986), as described
	// in |i2d_SAMPLE|.
	i2d_X509_REQ :: proc(req: ^X509_REQ, outp: ^^u8) -> i32 ---
}

// X509_REQ_VERSION_1 is the version constant for |X509_REQ| objects. No other
// versions are defined.
X509_REQ_VERSION_1 :: 0

@(default_calling_convention="c")
foreign lib {
	// X509_REQ_get_version returns the numerical value of |req|'s version. This
	// will always be |X509_REQ_VERSION_1| for valid CSRs. For compatibility,
	// |d2i_X509_REQ| also accepts some invalid version numbers, in which case this
	// function may return other values.
	X509_REQ_get_version :: proc(req: ^X509_REQ) -> c.long ---

	// X509_REQ_get_subject_name returns |req|'s subject name. Note this function is
	// not const-correct for legacy reasons.
	X509_REQ_get_subject_name :: proc(req: ^X509_REQ) -> ^X509_NAME ---

	// X509_REQ_get0_pubkey returns |req|'s public key as an |EVP_PKEY|, or NULL if
	// the public key was unsupported or could not be decoded. The |EVP_PKEY| is
	// cached in |req|, so callers must not mutate the result.
	X509_REQ_get0_pubkey :: proc(req: ^X509_REQ) -> ^EVP_PKEY ---

	// X509_REQ_get_pubkey behaves like |X509_REQ_get0_pubkey| but increments the
	// reference count on the |EVP_PKEY|. The caller must release the result with
	// |EVP_PKEY_free| when done. The |EVP_PKEY| is cached in |req|, so callers must
	// not mutate the result.
	X509_REQ_get_pubkey :: proc(req: ^X509_REQ) -> ^EVP_PKEY ---

	// X509_REQ_check_private_key returns one if |req|'s public key matches |pkey|
	// and zero otherwise.
	X509_REQ_check_private_key :: proc(req: ^X509_REQ, pkey: ^EVP_PKEY) -> i32 ---

	// X509_REQ_get_attr_count returns the number of attributes in |req|.
	X509_REQ_get_attr_count :: proc(req: ^X509_REQ) -> i32 ---

	// X509_REQ_get_attr returns the attribute at index |loc| in |req|, or NULL if
	// out of bounds.
	X509_REQ_get_attr :: proc(req: ^X509_REQ, loc: i32) -> ^X509_ATTRIBUTE ---

	// X509_REQ_get_attr_by_NID returns the index of the attribute in |req| of type
	// |nid|, or a negative number if not found. If found, callers can use
	// |X509_REQ_get_attr| to look up the attribute by index.
	//
	// If |lastpos| is non-negative, it begins searching at |lastpos| + 1. Callers
	// can thus loop over all matching attributes by first passing -1 and then
	// passing the previously-returned value until no match is returned.
	X509_REQ_get_attr_by_NID :: proc(req: ^X509_REQ, nid: i32, lastpos: i32) -> i32 ---

	// X509_REQ_get_attr_by_OBJ behaves like |X509_REQ_get_attr_by_NID| but looks
	// for attributes of type |obj|.
	X509_REQ_get_attr_by_OBJ :: proc(req: ^X509_REQ, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509_REQ_extension_nid returns one if |nid| is a supported CSR attribute type
	// for carrying extensions and zero otherwise. The supported types are
	// |NID_ext_req| (pkcs-9-at-extensionRequest from RFC 2985) and |NID_ms_ext_req|
	// (a Microsoft szOID_CERT_EXTENSIONS variant).
	X509_REQ_extension_nid :: proc(nid: i32) -> i32 ---

	// X509_REQ_get_extensions decodes the most preferred list of requested
	// extensions in |req| and returns a newly-allocated |STACK_OF(X509_EXTENSION)|
	// containing the result. It returns NULL on error, or if |req| did not request
	// extensions.
	//
	// CSRs do not store extensions directly. Instead there are attribute types
	// which are defined to hold extensions. See |X509_REQ_extension_nid|. This
	// function supports both pkcs-9-at-extensionRequest from RFC 2985 and the
	// Microsoft szOID_CERT_EXTENSIONS variant. If both are present,
	// pkcs-9-at-extensionRequest is preferred.
	X509_REQ_get_extensions :: proc(req: ^X509_REQ) -> ^stack_st_X509_EXTENSION ---

	// X509_REQ_get0_signature sets |*out_sig| and |*out_alg| to the signature and
	// signature algorithm of |req|, respectively. Either output pointer may be NULL
	// to ignore the value.
	X509_REQ_get0_signature :: proc(req: ^X509_REQ, out_sig: ^^ASN1_BIT_STRING, out_alg: ^^X509_ALGOR) ---

	// X509_REQ_get_signature_nid returns the NID corresponding to |req|'s signature
	// algorithm, or |NID_undef| if the signature algorithm does not correspond to
	// a known NID.
	X509_REQ_get_signature_nid :: proc(req: ^X509_REQ) -> i32 ---

	// X509_REQ_verify checks that |req| has a valid signature by |pkey|. It returns
	// one if the signature is valid and zero otherwise.
	X509_REQ_verify :: proc(req: ^X509_REQ, pkey: ^EVP_PKEY) -> i32 ---

	// X509_REQ_get1_email returns a newly-allocated list of NUL-terminated strings
	// containing all email addresses in |req|'s subject and all rfc822name names
	// in |req|'s subject alternative names. The subject alternative names extension
	// is extracted from the result of |X509_REQ_get_extensions|. Email addresses
	// which contain embedded NUL bytes are skipped.
	//
	// On error, or if there are no such email addresses, it returns NULL. When
	// done, the caller must release the result with |X509_email_free|.
	X509_REQ_get1_email :: proc(req: ^X509_REQ) -> ^stack_st_OPENSSL_STRING ---

	// X509_REQ_new returns a newly-allocated, empty |X509_REQ| object, or NULL on
	// error. This object may be filled in and then signed to construct a CSR.
	X509_REQ_new :: proc() -> ^X509_REQ ---

	// X509_REQ_set_version sets |req|'s version to |version|, which should be
	// |X509_REQ_VERSION_1|. It returns one on success and zero on error.
	//
	// The only defined CSR version is |X509_REQ_VERSION_1|, so there is no need to
	// call this function.
	X509_REQ_set_version :: proc(req: ^X509_REQ, version: c.long) -> i32 ---

	// X509_REQ_set_subject_name sets |req|'s subject to a copy of |name|. It
	// returns one on success and zero on error.
	X509_REQ_set_subject_name :: proc(req: ^X509_REQ, name: ^X509_NAME) -> i32 ---

	// X509_REQ_set_pubkey sets |req|'s public key to |pkey|. It returns one on
	// success and zero on error. This function does not take ownership of |pkey|
	// and internally copies and updates reference counts as needed.
	X509_REQ_set_pubkey :: proc(req: ^X509_REQ, pkey: ^EVP_PKEY) -> i32 ---

	// X509_REQ_delete_attr removes the attribute at index |loc| in |req|. It
	// returns the removed attribute to the caller, or NULL if |loc| was out of
	// bounds. If non-NULL, the caller must release the result with
	// |X509_ATTRIBUTE_free| when done. It is also safe, but not necessary, to call
	// |X509_ATTRIBUTE_free| if the result is NULL.
	X509_REQ_delete_attr :: proc(req: ^X509_REQ, loc: i32) -> ^X509_ATTRIBUTE ---

	// X509_REQ_add1_attr appends a copy of |attr| to |req|'s list of attributes. It
	// returns one on success and zero on error.
	X509_REQ_add1_attr :: proc(req: ^X509_REQ, attr: ^X509_ATTRIBUTE) -> i32 ---

	// X509_REQ_add1_attr_by_OBJ appends a new attribute to |req| with type |obj|.
	// It returns one on success and zero on error. The value is determined by
	// |X509_ATTRIBUTE_set1_data|.
	//
	// WARNING: The interpretation of |attrtype|, |data|, and |len| is complex and
	// error-prone. See |X509_ATTRIBUTE_set1_data| for details.
	X509_REQ_add1_attr_by_OBJ :: proc(req: ^X509_REQ, obj: ^ASN1_OBJECT, attrtype: i32, data: ^u8, len: i32) -> i32 ---

	// X509_REQ_add1_attr_by_NID behaves like |X509_REQ_add1_attr_by_OBJ| except the
	// attribute type is determined by |nid|.
	X509_REQ_add1_attr_by_NID :: proc(req: ^X509_REQ, nid: i32, attrtype: i32, data: ^u8, len: i32) -> i32 ---

	// X509_REQ_add1_attr_by_txt behaves like |X509_REQ_add1_attr_by_OBJ| except the
	// attribute type is determined by calling |OBJ_txt2obj| with |attrname|.
	X509_REQ_add1_attr_by_txt :: proc(req: ^X509_REQ, attrname: cstring, attrtype: i32, data: ^u8, len: i32) -> i32 ---

	// X509_REQ_add_extensions_nid adds an attribute to |req| of type |nid|, to
	// request the certificate extensions in |exts|. It returns one on success and
	// zero on error. |nid| should be |NID_ext_req| or |NID_ms_ext_req|.
	X509_REQ_add_extensions_nid :: proc(req: ^X509_REQ, exts: ^stack_st_X509_EXTENSION, nid: i32) -> i32 ---

	// X509_REQ_add_extensions behaves like |X509_REQ_add_extensions_nid|, using the
	// standard |NID_ext_req| for the attribute type.
	X509_REQ_add_extensions :: proc(req: ^X509_REQ, exts: ^stack_st_X509_EXTENSION) -> i32 ---

	// X509_REQ_sign signs |req| with |pkey| and replaces the signature algorithm
	// and signature fields. It returns the length of the signature on success and
	// zero on error. This function uses digest algorithm |md|, or |pkey|'s default
	// if NULL. Other signing parameters use |pkey|'s defaults. To customize them,
	// use |X509_REQ_sign_ctx|.
	X509_REQ_sign :: proc(req: ^X509_REQ, pkey: ^EVP_PKEY, md: ^EVP_MD) -> i32 ---

	// X509_REQ_sign_ctx signs |req| with |ctx| and replaces the signature algorithm
	// and signature fields. It returns the length of the signature on success and
	// zero on error. The signature algorithm and parameters come from |ctx|, which
	// must have been initialized with |EVP_DigestSignInit|. The caller should
	// configure the corresponding |EVP_PKEY_CTX| before calling this function.
	//
	// On success or failure, this function mutates |ctx| and resets it to the empty
	// state. Caller should not rely on its contents after the function returns.
	X509_REQ_sign_ctx :: proc(req: ^X509_REQ, ctx: ^EVP_MD_CTX) -> i32 ---

	// i2d_re_X509_REQ_tbs serializes the CertificationRequestInfo (see RFC 2986)
	// portion of |req|, as described in |i2d_SAMPLE|.
	//
	// This function re-encodes the CertificationRequestInfo and may not reflect
	// |req|'s original encoding. It may be used to manually generate a signature
	// for a new certificate request.
	i2d_re_X509_REQ_tbs :: proc(req: ^X509_REQ, outp: ^^u8) -> i32 ---

	// X509_REQ_set1_signature_algo sets |req|'s signature algorithm to |algo| and
	// returns one on success or zero on error.
	X509_REQ_set1_signature_algo :: proc(req: ^X509_REQ, algo: ^X509_ALGOR) -> i32 ---

	// X509_REQ_set1_signature_value sets |req|'s signature to a copy of the
	// |sig_len| bytes pointed by |sig|. It returns one on success and zero on
	// error.
	//
	// Due to a specification error, PKCS#10 certificate requests store signatures
	// in ASN.1 BIT STRINGs, but signature algorithms return byte strings rather
	// than bit strings. This function creates a BIT STRING containing a whole
	// number of bytes, with the bit order matching the DER encoding. This matches
	// the encoding used by all X.509 signature algorithms.
	X509_REQ_set1_signature_value :: proc(req: ^X509_REQ, sig: ^u8, sig_len: c.size_t) -> i32 ---
}

sk_X509_NAME_ENTRY_delete_if_func :: proc "c" (^X509_NAME_ENTRY, rawptr) -> i32
sk_X509_NAME_ENTRY_free_func      :: proc "c" (^X509_NAME_ENTRY)
stack_st_X509_NAME_ENTRY          :: struct {}
sk_X509_NAME_ENTRY_copy_func      :: proc "c" (^X509_NAME_ENTRY) -> ^X509_NAME_ENTRY
sk_X509_NAME_ENTRY_cmp_func       :: proc "c" (^^X509_NAME_ENTRY, ^^X509_NAME_ENTRY) -> i32
sk_X509_NAME_delete_if_func       :: proc "c" (^X509_NAME, rawptr) -> i32
sk_X509_NAME_copy_func            :: proc "c" (^X509_NAME) -> ^X509_NAME
stack_st_X509_NAME                :: struct {}
sk_X509_NAME_free_func            :: proc "c" (^X509_NAME)
sk_X509_NAME_cmp_func             :: proc "c" (^^X509_NAME, ^^X509_NAME) -> i32

@(default_calling_convention="c")
foreign lib {
	// X509_NAME_new returns a new, empty |X509_NAME|, or NULL on error.
	X509_NAME_new :: proc() -> ^X509_NAME ---

	// X509_NAME_free releases memory associated with |name|.
	X509_NAME_free :: proc(name: ^X509_NAME) ---

	// d2i_X509_NAME parses up to |len| bytes from |*inp| as a DER-encoded X.509
	// Name (RFC 5280), as described in |d2i_SAMPLE|.
	d2i_X509_NAME :: proc(out: ^^X509_NAME, inp: ^^u8, len: c.long) -> ^X509_NAME ---
